added Header, modified SearchForm

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="preload" as="font" href="./fonts/Montserrat-Regular.ttf" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" as="font" href="./fonts/Montserrat-Light.ttf" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" as="font" href="./fonts/Montserrat-Black.ttf" type="font/ttf" crossorigin="anonymous">
